<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FlashAir Commander</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_download_selected_files">Download selected files</string>
    <string name="menu_keep_selected_folders_synced">Keep selected folders synchronized</string>
    <string name="menu_select_all">Select all files</string>
    <string name="menu_deselect_all">Deselect all files</string>
    
    <!-- <string name=""></string> -->
    
    <!-- string name="pref_example_title">Example</string>
    <string name="pref_example_summary">Example second line</string>
    <string name="pref_example_default_value">Example value</string>
    <string-array name="pref_example_list_titles">
        <item>Example 1</item>
        <item>Example 2</item>
        <item>Example 3</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>Example_1</item>
        <item>Example_2</item>
        <item>Example_3</item>
    </string-array -->
    
    <string name="pref_flashair_hostname">Hostname/IP of FlashAir device</string>
    <string name="pref_flashair_hostname_default_value">flashair</string>
    <string name="pref_store_imapges_in_album_dir_title">Don\'t store pictures in album</string>
    <string name="pref_store_imapges_in_album_dir_summary">Don\'t save the downloaded pictures in Android album directory (mostly on SD-Card)</string>
    <string name="pref_alternative_image_store_directory_title">Alternative download directory</string>
    <string name="pref_alternative_image_store_directory_default_value">/mnt/sdcard/FlashAir</string>
    <string name="pref_delete_Files_after_download_title">Delete files after download</string>
    <string name="pref_delete_Files_after_download_summary">Delete files from FlashAir device after successful download</string>
    <string name="pref_overwrite_target_files_title">Overwrite files</string>
    <string name="pref_overwrite_target_files_summary">Overwrite files in target download directory if they already exist</string>
    
    <string name="dialog_title_error">Error</string>
    <string name="dialog_msg_error_connecting_to_flashair">Error connecting to FlashAir device.</string>
    
    <string name="downloading">Downloading</string>
    <string name="please_wait">Please wait</string>
    
    <string name="please_wait_connecting">Please wait.\nTrying to connect to FlashAir device &#8230;</string>
    <string name="error_on_main_screen">There are no items to display.\nMaybe you dont\'t have any files stored on the FlashAir device or the connection to the device could not be established. If so, check the hostname/ip in the settings screen.</string>
    
</resources>